crates/scheduler/tests/trybuild/fail/serde_container_tag.rs
use scheduler_macros::ScheduledTaskParams;

#[derive(ScheduledTaskParams)]
#[task_params(schema_version = 1)]
#[serde(tag = "kind")]
struct Params {
    name: String,
}

fn main() {}
