crates/scheduler/tests/trybuild/fail/serde_container_tag.stderr
error: this serde container attribute is incompatible with ScheduledTaskParams
 --> tests/trybuild/fail/serde_container_tag.rs:5:9
  |
5 | #[serde(tag = "kind")]
  |         ^^^^^^^^^^^^
